--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,3 +95,16 @@ body {
   margin: 0 auto;
   padding: 0 20px;
 }
+.header-content {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header-logo-button {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 16px; /* Adjust spacing as needed */
+}
